--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -1,17 +1,22 @@
 {
   "home_nav_link": "головна",
   "paintings_nav_link": "роботи",
-  "portfolio_nav_link": "портфоліо",
-
   "gallery_nav_link": "галерея",
   "workshops_nav_link": "майстер-класи",
   "about_nav_link": "про мене",
-  
   "gallery": "Галерея робіт",
+  "cat_portraits": "портрети",
+  "cat_landscapes": "краєвиди",
+  "cat_still": "натюрморти",
+  "cat_animals": "тварини",
 
-  "cat_portraits" : "портрети",
-  "cat_landscapes" : "краєвиди",
-  "cat_still" : "натюрморти",
-  "cat_animals" : "тварини"
+  "workshops_header": "Майстеркласи",
+  "workshops_p1": "Я проводжу майстер-класи з малювання для дорослих і дітей. Моя мета – показати, що малювати може кожен.",
+  "workshops_p2": "На заняттях я крок за кроком допомагаю розкрити ідею, підібрати кольори й не боятися помилок. Мої майстер-класи підходять як для тих, хто малює вперше, так і для тих, хто хоче просто провести час творчо.",
+  "workshops_p3": "Мене захоплює взаємодія з людьми, особливо момент, коли страх поступається бажанню створювати. Я завжди кажу: “Довіртесь процесу”. Бачити здивування людей, коли вони дивляться на свою роботу й питають: «Це справді я намалював(ла)?» – одна з найцінніших частин мого шляху.",
 
+  "about_me_header": "Про мене",
+  "about_me_p1": "Я – сучасна художниця, яка працює з кольором та емоціями. Мене безмежно надихають люди – особливо їхні обличчя. Очі займають особливе місце у моїх роботах: через них я намагаюся передати не лише зовнішність, а й душу людини. Я хочу, щоб глядач міг відчути того, кого я намалювала, зрозуміти його історію без слів.",
+  "about_me_p2": "Я малюю стільки, скільки себе пам’ятаю. Ще з дитинства, поки інші бігали й гралися, я могла сидіти наодинці й тихо малювати, повністю занурившись у свій світ. З роками це прагнення до творчості розвивалося через заняття в художньому гуртку та приватні уроки в інших художників, формуючи мій стиль.",
+  "about_me_p3": "Для мене мистецтво – це спосіб спілкуватися та самовиражатися. Кожна робота – це маленька історія, у якій поєднуються колір, емоції та душа людини."
 }
