ua locale adjustment

--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -6,11 +6,11 @@
   "about_nav_link": "про мене",
   "gallery": "Галерея робіт",
   "cat_portraits": "портрети",
-  "cat_landscapes": "краєвиди",
+  "cat_landscapes": "пейзажі",
   "cat_still": "натюрморти",
   "cat_animals": "тварини",
 
-  "workshops_header": "Майстеркласи",
+  "workshops_header": "Майстер-класи",
   "workshops_p1": "Я проводжу майстер-класи з малювання для дорослих і дітей. Моя мета – показати, що малювати може кожен.",
   "workshops_p2": "На заняттях я крок за кроком допомагаю розкрити ідею, підібрати кольори й не боятися помилок. Мої майстер-класи підходять як для тих, хто малює вперше, так і для тих, хто хоче просто провести час творчо.",
   "workshops_p3": "Мене захоплює взаємодія з людьми, особливо момент, коли страх поступається бажанню створювати. Я завжди кажу: “Довіртесь процесу”. Бачити здивування людей, коли вони дивляться на свою роботу й питають: «Це справді я намалював(ла)?» – одна з найцінніших частин мого шляху.",
